developpement-web-et-dispositif-interactif-s6@TP#4 - Fix layout of pokemon's infos on mobile

--- a/developpement-web-et-dispositif-interactif-s6/travaux-pratiques/numero-4/ressources/github-actions/partie-3/src/style.css
+++ b/developpement-web-et-dispositif-interactif-s6/travaux-pratiques/numero-4/ressources/github-actions/partie-3/src/style.css
@@ -130,7 +130,7 @@ details[open] {
             rgb(from var(--footer-bg) r g b / var(--alpha)) 90%,
             rgb(from var(--footer-bg) r g b / var(--alpha)) 100%
         );
-        height: 250px;
+        height: 150px;
     }
 
     &::before {
@@ -140,5 +140,6 @@ details[open] {
             rgb(from var(--footer-bg) r g b / var(--alpha)) 0%,
             rgba(255, 255, 255, 1) 50%
         );
+        background-color: #ffffff;
     }
 }
